# JPEG_Analysis

./: CMakeLists.txt  PSNR.h  RGBtoY.h  Utils.h  additiveNoise.h  changeFileToDots.h  gaussianFilter.h  imageData.h  impulseNoise.h  laplaceOperator.h  main.cpp  medianFilter.h  movingAverage.h  parallel.h
